--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    background: rgb(63,94,251);
+    background: linear-gradient(315deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
 
 header h1 {
@@ -26,6 +28,8 @@ body form {
     padding: 1vw;
     display: block;
     border: solid;
+    -webkit-box-shadow: 0px 0px 23px -3px #000000; 
+    box-shadow: 0px 0px 23px -3px #000000;
     border-color: rgb(35, 35, 136);
     border-width: 2em;
     border-radius:3em;
@@ -38,6 +42,7 @@ body form input {
 body form textarea {
     width: 90%;
     padding: 2%;
+    background: rgba(255,255,255,0.3);
     border: solid;
     border-width: 1em;
     border-top-left-radius: 2em;
@@ -66,7 +71,7 @@ body form input[type=submit]:hover{
 
 body form .date {
     margin: 2%;
-    text-align: justify;
+    text-align: left;
     padding: 20px;
     border: solid;
     border-width: 0.5em;
@@ -80,6 +85,10 @@ body form .date .date-item {
 
 body form .date input {
     margin-bottom: unset;
+    background: rgba(255,255,255,0.3);
+    border: none;
+    border-radius: 1em;
+    padding: 5px;
 }
 /*
 body form input[type=button] {
@@ -143,10 +152,13 @@ body .divSubmit {
     body form {
         margin: 2vh;
         margin-bottom: 10vh;
+        border-width: 1em;
     }
 
     body form textarea {
-
+        margin-top: 1em;
+        font-size: 0.8em;
+        tab-size: 2;
         border-width: 0.5em;
 
     }
